--- a/ncl22-revised.tex
+++ b/ncl22-revised.tex
@@ -1407,8 +1407,8 @@ The admissibility of the rules in (\ref{eq:admis}) allows the construction of a 
 It is possible to prove that the function $\mathsf{focus}$ maps  $\circeq$-equivalent derivations in the sequent calculus for \SkNMILL\ to syntactically identical derivations in focused sequent calculus. One can also show that $\mathsf{focus}$ is the inverse of $\mathsf{emb}_\RI$, i.e. $\mathsf{focus}\;(\mathsf{emb}_\RI \;f) = f$ for all $f : S \mid \Gamma \vdash_\RI A$ and $\mathsf{emb}_\RI\;(\mathsf{focus}\;g) \circeq g$ for all $g : S \mid \Gamma \vdash A$. In other words, each $\circeq$-equivalence class in the sequent calculus corresponds uniquely to a single derivation in the focused sequent calculus.
 
 The focused sequent calculus solves the \emph{coherence problem} for skew monoidal closed categories.
-As proved in Theorems \ref{thm:models}, \ref{thm:unique}, the sequent calculus for \SkNMILL\ is (a presentation of) the free skew monoidal closed category $\FSkMCC(\mathsf{At})$ on the set $\mathsf{At}$. The coherence problem is the problem of deciding whether two parallel maps in $\FSkMCC(\mathsf{At})$ are equal. %wrt.\ the equational theory of skew monoidal closed categories.
-This is equivalent to deciding whether two sequent calculus derivations $f,g : A \mid ~ \vdash B$ are in the same $\circeq$-equivalence class. But that in turn is the same as deciding whether $\mathsf{focus}\;f = \mathsf{focus}\;g$ in the focused sequent calculus, and deciding syntactic equality of focused derivations is straightforward. The Hilbert-style calculus is a more direct presentation of $\FSkMCC(\mathsf{At})$, but thanks to the bijection (up to $\doteq$ resp.\ $\circeq$) between Hilbert-style and sequent calculus derivations, we can also decide if two Hilbert-style derivations $f, g : A \Rightarrow B$ are in the same $\doteq$-equivalence class.
+As proved in Theorems \ref{thm:models}, \ref{thm:unique}, the sequent calculus for \SkNMILL\ is a presentation of the free skew monoidal closed category $\FSkMCC(\mathsf{At})$ on the set $\mathsf{At}$. The coherence problem is the problem of deciding whether two parallel maps in $\FSkMCC(\mathsf{At})$ are equal. 
+This is equivalent to deciding whether two sequent calculus derivations $f,g : A \mid ~ \vdash B$ are in the same $\circeq$-equivalence class. But that in turn is the same as deciding whether $\mathsf{focus}\;f = \mathsf{focus}\;g$ in the focused sequent calculus, and deciding syntactic equality of focused derivations is straightforward. The Hilbert-style calculus is a direct presentation of $\FSkMCC(\mathsf{At})$, but thanks to the bijection (up to $\doteq$ resp.\ $\circeq$) between Hilbert-style and sequent calculus derivations, we can also decide if two Hilbert-style derivations $f, g : A \Rightarrow B$ are in the same $\doteq$-equivalence class.
 
 \section{Conclusion}
 
