unabbreviated journal titles in bib

--- a/ncl22-revised.bib
+++ b/ncl22-revised.bib
@@ -1,7 +1,8 @@
 @article{abrusci:noncommutative:1990,
   author    = {V. Michele Abrusci},
   title     = {Non-commutative Intuitionistic Linear Logic},
-  journal   = {Math. Log. Quart.},
+  XXXjournal   = {Math. Log. Quart.},
+  journal = "Mathematical Logic Quarterly",
   volume    = {36},
   number    = {4},
   pages     = {297--318},
@@ -14,7 +15,8 @@
                James Chapman and
                Tarmo Uustalu},
   title     = {Monads Need Not Be Endofunctors},
-  journal   = {Log. Methods Comput. Sci.},
+  XXXjournal   = {Log. Methods Comput. Sci.},
+  journal = "Logical Methods in Computer Science",
   volume    = {11},
   number    = {1},
   eid   = {3},
@@ -28,7 +30,8 @@
 	doi = {10.1093/logcom/2.3.297},
 	pages = {297--347},
 	number = {3},
-	journal = {J. Log.  Comput.},
+	XXXjournal = {J. Log.  Comput.},
+	journal = "J. of Logic and Computation",
 	author = {Jean-Marc Andreoli},
 	year = {1992}
 }
@@ -40,7 +43,8 @@
 	doi = {10.1007/s40062-015-0121-z},
 	pages = {31--81},
 	number = {1},
-	journal = {J. Homotopy Relat. Struct.},
+	XXXjournal = {J. Homotopy Relat. Struct.},
+	journal = "J. of Homotopy and Related Structures",
 	author = {John Bourke},
 	year = {2017}
 }
@@ -50,7 +54,8 @@
 	volume = {506},
 	doi = {10.1016/j.jalgebra.2018.02.039},
 	pages = {237--266},
-	journal = {J. Alg.},
+	XXXjournal = {J. Alg.},
+	journal = "J. of Algebra",
 	author = {John Bourke and Stephen Lack},
 	year = {2018}
 }
@@ -61,7 +66,8 @@
 	doi = {10.1017/s0305004114000498},
 	pages = {211--222},
 	number = {2},
-	journal = {Math. Proc. Cambridge Philos. Soc.},
+	XXXjournal = {Math. Proc. Cambridge Philos. Soc.},
+	journal = "Mathematical Proc. of Cambridge Philosophical Society",
 	author = {Michael Buckley and Richard Garner and Stephen Lack and Ross Street},
 	year = {2015}
 }
@@ -76,7 +82,8 @@
                Luke Ong},
   title     = {Canonical Sequent Proofs via Multi-Focusing},
   booktitle = {Proc. of 5th IFIP Int. Conf. on Theoretical Computer Science, {TCS} 2008},
-  series    = {Int.\ Feder.\ of Inform.\ Process.},
+  XXXseries    = {Int.\ Feder.\ of Inform.\ Process.},
+  series = "Int.\ Federation of Information Processing Series",
   volume    = {273},
   pages     = {383--396},
   publisher = {Springer},
@@ -98,7 +105,8 @@
 @article{girard:constructive:91,
   author    = {Jean-Yves Girard},
   title     = {A New Constructive Logic: Classical Logic},
-  journal   = {Math. Struct. Comput. Sci.},
+  XXXjournal   = {Math. Struct. Comput. Sci.},
+  journal = "Mathematical Structures in Computer Science",
   volume    = {1},
   number    = {3},
   pages     = {255--296},
@@ -111,8 +119,9 @@
   editor    = {Iliano Cervesato and
                Maribel Fern{\'{a}}ndez},
   title     = {Linear Exponential Comonads without Symmetry},
-  booktitle = {Proc. of 4th Int. Wksh. on Linearity, {LINEARITY} 2016},
-  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  booktitle = {Proc. of 4th Int. Workshop on Linearity, {LINEARITY} 2016},
+  XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
+  series = "Electronic Proc. in Theoretical Computer Science",
   volume    = {238},
   pages     = {54--63},
   year      = {2016},
@@ -129,9 +138,10 @@
                Valeria {de Paiva} and
                Lorenzo {Tortora de Falco}},
   title     = {On the {L}ambek Calculus with an Exchange Modality},
-  booktitle = {Proc. of Joint Int. Wksh. on Linearity {\&} Trends
+  booktitle = {Proc. of Joint Int. Workshop on Linearity {\&} Trends
                in Linear Logic and Applications, Linearity-TLLA 2018},
-  series    = {Electron. Proc. Theor. Comput. Sci.},
+  XXXseries    = {Electron. Proc. Theor. Comput. Sci.},
+  series = "Electronic Proc. in Theoretical Computer Science",
   volume    = {292},
   pages     = {43--89},
   year      = {2018},
@@ -144,7 +154,8 @@
 	volume = {26},
 	pages = {385--402},
 	url = {http://www.tac.mta.ca/tac/volumes/26/15/26-15abs.html},
-	journal = {Theor. Appl. Categ.},
+	XXXjournal = {Theor. Appl. Categ.},
+	journal = "Theory and Applications of Categories",
 	author = {Stephen Lack and Ross Street},
 	year = {2012}
 }
@@ -154,7 +165,8 @@
 	volume = {258},
 	doi = {10.1016/j.aim.2014.03.003},
 	pages = {351--396},
-	journal = {Adv.\ Math.},
+	XXXjournal = {Adv.\ Math.},
+	journal = "Advances in Mathematics",
 	author = {Stephen Lack and Ross Street},
 	year = {2014}
 }
@@ -162,7 +174,8 @@
 @article{lambek:mathematics:58,
   title={The Mathematics of Sentence Structure},
   author={Joachim Lambek},
-  journal={Amer. Math. Monthly},
+  XXXjournal={Amer. Math. Monthly},
+  journal = "American Mathematical Monthly", 
   volume={65},
   number={3},
   pages={154--170},
@@ -174,7 +187,8 @@
   author    = {Joachim Lambek},
   title     = {Deductive Systems and Categories {I}: Syntactic Calculus and Residuated
                Categories},
-  journal   = {Math. Syst. Theory},
+  XXXjournal   = {Math. Syst. Theory},
+  journal = "Mathematical Systems Theory",
   volume    = {2},
   number    = {4},
   pages     = {287--318},
@@ -185,7 +199,8 @@
 @article{maclane1963natural,
   title={Natural Associativity and Commutativity},
   author={Saunders {Mac Lane}},
-  journal={Rice Univ. Stud.},
+  XXXjournal={Rice Univ. Stud.},
+  journal = "Rice University Studies",
   volume={49},
   number={4},
   year={1963},
@@ -202,7 +217,8 @@
   volume={27},
   pages={15--215},
   year={2009},
-  publisher = "Soc.\ Math.\ de France"
+  XXXpublisher = "Soc.\ Math.\ de France",
+  publisher = "Soci{\'e}t{\'e} Math{\'e}matique de France"
 }
 
 @inproceedings{scherer:simple:2015,
@@ -223,7 +239,8 @@
 	doi = {10.1016/j.jpaa.2012.09.020},
 	pages = {973--988},
 	number = {6},
-	journal = {J. Pure Appl. Alg.},
+	XXXjournal = {J. Pure Appl. Alg.},
+	journal = "J. of Pure and Applied Algebra",
 	author = {Ross Street},
 	year = {2013},
 }
@@ -231,7 +248,8 @@
 @article{szlachanyi:skew-monoidal:2012,
 	title = {Skew-Monoidal Categories and Bialgebroids},
 	volume = {231},
-  journal = {Adv.\ Math.},
+        XXXjournal = {Adv.\ Math.},
+	journal = "Advances in Mathematics",
 	doi = {10.1016/j.aim.2012.06.027},
 	pages = {1694--1730},
 	number = {3--4},
@@ -245,7 +263,8 @@
                Jean Goubault{-}Larrecq},
   title     = {Realizability without Symmetry},
   booktitle = {Proc. of 29th {EACSL} Ann. Conf. on Computer Science Logic, {CSL} 2021},
-  series    = {Leibniz Int.\ Proc.\ in Inform.},
+  XXXseries    = {Leibniz Int.\ Proc.\ in Inform.},
+  series = "Leibniz Int.\ Proc.\ in Informatics",
   volume    = {183},
   pages     = {38:1--38:16},
   publisher = {Dagstuhl Publishing},
@@ -261,14 +280,15 @@
   editor    = {Claudio {Sacerdoti Coen} and
                Alwen Tiu},
   title     = {Deductive Systems and Coherence for Skew Prounital Closed Categories},
-  booktitle = {Proc. of 15th Wksh. on Logical Frameworks and Meta-Languages:
+  booktitle = {Proc. of 15th Workshop on Logical Frameworks and Meta-Languages:
                Theory and Practice, {LFMTP} 2020},
-  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
+  series = "Electronic Proc. in Theoretical Computer Science",
   volume    = {332},
   pages     = {35--53},
   year      = {2021},
   doi       = {10.4204/eptcs.332.3},
-  publisher = "Open Publishing Assoc."
+  publisher = "Open Publishing Association"
 }
 
 @article{uustalu:eilenberg-kelly:2020,
@@ -276,7 +296,8 @@
 	volume = {352},
 	doi = {10.1016/j.entcs.2020.09.012},
 	pages = {233--256},
-	journal = {Electron. Notes Theor. Comput. Sci.},
+	XXXjournal = {Electron. Notes Theor. Comput. Sci.},
+	journal = "Electronic Notes in Theoretical Computer Science",
 	author = {Tarmo Uustalu and Niccol{\`o} Veltri and Noam Zeilberger},
 	year = {2020}
 }
@@ -290,12 +311,13 @@
   title     = {Proof Theory of Partially Normal Skew Monoidal Categories},
   booktitle = {Proc. of 3rd Ann. Int. Applied Category Theory
                Conf. 2020, {ACT} 2020},
-  series    = {Electron. Proc. in Theor. Comput. Sci.},
+  XXXseries    = {Electron. Proc. in Theor. Comput. Sci.},
+  series = "Electronic Proc. in Theoretical Computer Science",
   volume    = {333},
   pages     = {230--246},
   year      = {2021},
   doi       = {10.4204/eptcs.333.16},
-  publisher = "Open Publishing Assoc."
+  publisher = "Open Publishing Association"
   }
 
 @incollection{uustalu:sequent:2021,
@@ -315,9 +337,10 @@
 @inproceedings{veltri:coherence:2021,
 	title = {Coherence via Focusing for Symmetric Skew Monoidal Categories},
 	doi = {10.1007/978-3-030-88853-4_12},
-	series = {Lect. Notes in Comput. Sci.},
+	XXXseries = {Lect. Notes in Comput. Sci.},
+	series = "Lecture Notes in Computer Science",
 	pages = {184--200},
-	booktitle = {Proc.\ of 27th Int.\ Wksh.\ on Logic, Language, Information, and Computation, WoLLIC 2021},
+	booktitle = {Proc.\ of 27th Int.\ Workshop on Logic, Language, Information, and Computation, WoLLIC 2021},
 	publisher = {Springer},
 	author = {Niccol{\`o} Veltri},
 	editor = {Alexandra Silva and Renata Wassermann and Ruy {de Queiroz}},
@@ -329,7 +352,8 @@
 @article{zeilberger:semiassociative:19,
   author    = {Noam Zeilberger},
   title     = {A Sequent Calculus for a Semi-Associative Law},
-  journal   = {Log. Methods Comput. Sci.},
+  XXXjournal   = {Log. Methods Comput. Sci.},
+  journal = "Logical Methods in Computer Science",
   volume    = {15},
   number    = {1},
   eid = 9,
@@ -342,7 +366,8 @@
   title = "LJQ: A Strongly Focused Calculus for Intuitionistic Logic",
   editor = "Arnold Beckmann and Ulrich Berger and Benedikt L{\"o}we and John V. Tucker",
   booktitle = "Proc.\ of 2nd Conf.\ on Computability in Europe, CiE 2006",
-  series = "Lect.\ Notes in Comput.\ Sci.",
+  XXXseries = "Lect.\ Notes in Comput.\ Sci.",
+  series = "Lecture Notes in Computer Science",
   volume = 3988,
   pages = "173--185",
   publisher = "Springer",
